@@ -1,3 +1,7 @@
+Tue Sep 23 16:59:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* hash.c (ENVMATCH, ENVNMATCH): reduced same code.
+
 Tue Sep 23 16:55:11 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* ruby.h: fix comment and rename macro HAVE_RUBY_MVM_H to
